[project]
name = "python-algorithms"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mypy",
    "ruff",
    "coverage==7.13.1",
    "pytest==9.0.2",
]

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I"]

[tool.pytest.ini_options]
addopts = "-q"
markers = [
    "array: involves arrays.",
    "backtrack: involves backtracking.",
    "dynamic: involves dynamic programming.",
    "graph: involves graphs.",
    "list: involves linked lists.",
    "math: involves mathematics.",
    "online: involves online algorithms.",
    "queue: involves queues.",
    "sorting: involves sorting arrays.",
    "stack: involves stacks.",
    "string: involves string manipulation.",
    "tree: involves trees with nodes.",
]
